syntax = "proto3";
// This is a legacy package that requires additional migration logic
// in order to use the correct package. Decision made to use legacy package path
// until clear steps for migration logic and the unknowns for state breaking are
// investigated for changing proto package.
package symphony.concentratedliquidity.v1beta1;

import "cosmos_proto/cosmos.proto";
import "gogoproto/gogo.proto";
import "google/protobuf/timestamp.proto";

option go_package = "github.com/osmosis-labs/osmosis/v27/x/concentrated-liquidity/model";

message Pool {
  option (gogoproto.goproto_getters) = false;
  option (gogoproto.goproto_stringer) = false;
  option (cosmos_proto.implements_interface) = "PoolI";

  // pool's address holding all liquidity tokens.
  string address = 1 [ (gogoproto.moretags) = "yaml:\"address\"" ];

  // address holding the incentives liquidity.
  string incentives_address = 2
      [ (gogoproto.moretags) = "yaml:\"incentives_address\"" ];

  // address holding spread rewards from swaps.
  string spread_rewards_address = 3
      [ (gogoproto.moretags) = "yaml:\"spread_rewards_address\"" ];

  uint64 id = 4;

  // Amount of total liquidity
  string current_tick_liquidity = 5 [

    (gogoproto.customtype) = "cosmossdk.io/math.LegacyDec",
    (gogoproto.moretags) = "yaml:\"current_tick_liquidity\"",
    (gogoproto.nullable) = false
  ];

  string token0 = 6;
  string token1 = 7;

  string current_sqrt_price = 8 [
    (gogoproto.customtype) = "github.com/osmosis-labs/osmosis/osmomath.BigDec",
    (gogoproto.moretags) = "yaml:\"spot_price\"",
    (gogoproto.nullable) = false
  ];
  int64 current_tick = 9 [ (gogoproto.moretags) = "yaml:\"current_tick\"" ];
  // tick_spacing must be one of the authorized_tick_spacing values set in the
  // concentrated-liquidity parameters
  uint64 tick_spacing = 10 [ (gogoproto.moretags) = "yaml:\"tick_spacing\"" ];
  int64 exponent_at_price_one = 11
      [ (gogoproto.moretags) = "yaml:\"exponent_at_price_one\"" ];

  // spread_factor is the ratio that is charged on the amount of token in.
  string spread_factor = 12 [

    (gogoproto.customtype) = "cosmossdk.io/math.LegacyDec",
    (gogoproto.moretags) = "yaml:\"spread_factor\"",
    (gogoproto.nullable) = false
  ];

  // last_liquidity_update is the last time either the pool liquidity or the
  // active tick changed
  google.protobuf.Timestamp last_liquidity_update = 13 [
    (gogoproto.nullable) = false,
    (gogoproto.stdtime) = true,
    (gogoproto.moretags) = "yaml:\"last_liquidity_update\""
  ];
}